--- a/rasa/config.yml
+++ b/rasa/config.yml
@@ -14,23 +14,34 @@ pipeline:
 # # No configuration for the NLU pipeline was provided. The following default pipeline was used to train your model.
 # # If you'd like to customize it, uncomment and adjust the pipeline.
 # # See https://rasa.com/docs/rasa/tuning-your-model for more information.
-- name: WhitespaceTokenizer
-- name: RegexFeaturizer
-- name: LexicalSyntacticFeaturizer
-- name: CountVectorsFeaturizer
-- name: CountVectorsFeaturizer
-  analyzer: char_wb
-  min_ngram: 1
-  max_ngram: 4
+# - name: WhitespaceTokenizer
+# - name: RegexFeaturizer
+# - name: LexicalSyntacticFeaturizer
+# - name: CountVectorsFeaturizer
+# - name: CountVectorsFeaturizer
+#   analyzer: char_wb
+#   min_ngram: 1
+#   max_ngram: 4
+# - name: DIETClassifier
+#   epochs: 100
+#   constrain_similarities: true
+# - name: EntitySynonymMapper
+# - name: ResponseSelector
+#   epochs: 100
+#   constrain_similarities: true
+# - name: FallbackClassifier
+#   threshold: 0.3
+#   ambiguity_threshold: 0.1
+- name: HFTransformersNLP
+  model_weights: "vinai/phobert-base"
+  model_name: "phobert"
+- name: "LanguageModelTokenizer"
+- name: "LanguageModelFeaturizer"
 - name: DIETClassifier
   epochs: 100
   constrain_similarities: true
-- name: EntitySynonymMapper
-- name: ResponseSelector
-  epochs: 100
-  constrain_similarities: true
 - name: FallbackClassifier
-  threshold: 0.3
+  threshold: 0.7
   ambiguity_threshold: 0.1
 
 # Configuration for Rasa Core.
