10:49- 10/5/25: Update gitignore, demos-chatbot_480p.mp4

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ rasa/.venv
 
 # Server Ignore
 rasa/.venv
-rasa/models/*.gz
+rasa/models/*.tar.gz
+rasa/.rasa
 backend/__pycache__
 backend/**/__pycache__
